fix video in modal overflowing

--- a/src/index.scss
+++ b/src/index.scss
@@ -123,7 +123,8 @@ section.details {
 @container modal (min-width: 0px) {
   video,
   .gatsby-image-wrapper {
-    * {
+    &,
+    & * {
       max-width: 100cqw;
       max-height: 100cqh;
     }
